<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="4dp"
            android:text="@string/label_sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"
            android:textStyle="bold"
            android:transitionName="tvTemp" />

    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="48dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/label_first_name"
                        android:textColor="@color/colorPurple"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="12dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/label_family_name"
                        android:textColor="@color/colorPurple"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="12dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFamilyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/label_date_of_birth"
                        android:textColor="@color/colorPurple"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="12dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:imeOptions="actionNext"
                        android:clickable="true"
                        android:focusable="false"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/label_email"
                        android:textColor="@color/colorPurple"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="12dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="40"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/label_password"
                        android:textColor="@color/colorPurple"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="12dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:textSize="14dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvContent"
                android:layout_alignStart="@+id/cvContent"
                android:layout_alignEnd="@+id/cvContent"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="36dp"
                android:elevation="8dp"
                android:layout_alignLeft="@+id/cvContent"
                android:layout_alignRight="@+id/cvContent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="12dp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvContent"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:text="@string/label_already_registered"
                    android:textSize="12dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:paddingStart="8dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="12dp"
                    android:text="@string/label_login_here"
                    android:textSize="12dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>